<resources>
    <string name="app_name">Chorizito</string>
    <string name="telefono">Telefono</string>
    <string name="clave">Clave</string>
    <string name="entrar">Entrar</string>
    <string name="inicio">Inicio Sesión</string>
    <string name="reg">Registrar</string>
    <string name="title_activity_menu_inicio">menu_inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_prod">Productos</string>
    <string name="menu_coti">Cotizar</string>
    <string name="menu_reg">Registrar Cooperativa</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_prov">Registrar Proveedor</string>
    <string></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista_insumos">listaInsumos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>