<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Inicio" />
        <item
            android:id="@+id/nav_prod"
            android:icon="@drawable/items"
            android:title="@string/menu_prod" />
        <item
            android:id="@+id/nav_reg"
            android:icon="@drawable/agregar"
            android:title="@string/menu_reg" />

        <item
            android:id="@+id/nav_prov"
            android:icon="@drawable/agregar"
            android:title="@string/menu_prov" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/config"
            android:title="@string/menu_config" />
    </group>
</menu>