<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cerdito"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/cerdito" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sour_candy"
            android:text="@string/inicio"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:ems="10"
            android:fontFamily="@font/sour_candy"
            android:gravity="center|start|center_horizontal"
            android:hint="@string/telefono"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TextContrastCheck" />

        <EditText
            android:id="@+id/Clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:fontFamily="@font/sour_candy"
            android:gravity="center|start"
            android:hint="@string/clave"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TextContrastCheck" />

        <Button
            android:id="@+id/btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded"
            android:fontFamily="@font/sour_candy"
            android:onClick="entrarMenu"
            android:shadowColor="@color/primario"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>